@@ -20,6 +20,7 @@ package org.netxms.ui.eclipse.topology.views;
 
 import java.util.ArrayList;
 import java.util.List;
+import org.eclipse.core.runtime.Platform;
 import org.eclipse.jface.action.Action;
 import org.eclipse.jface.action.GroupMarker;
 import org.eclipse.jface.action.IMenuListener;
@@ -35,6 +36,7 @@ import org.eclipse.swt.events.DisposeListener;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Menu;
 import org.eclipse.swt.widgets.Shell;
+import org.eclipse.swt.widgets.TableItem;
 import org.eclipse.ui.IActionBars;
 import org.eclipse.ui.IViewPart;
 import org.eclipse.ui.IWorkbenchActionConstants;
@@ -75,6 +77,9 @@ public class HostSearchResults extends ViewPart
 	private SortableTableViewer viewer;
 	private List<ConnectionPoint> results = new ArrayList<ConnectionPoint>();
 	private Action actionClearLog;
+	private Action actionCopyMAC;
+	private Action actionCopyIP;
+	private Action actionCopyRecord;
 	
 	/* (non-Javadoc)
 	 * @see org.eclipse.ui.part.WorkbenchPart#createPartControl(org.eclipse.swt.widgets.Composite)
@@ -84,7 +89,7 @@ public class HostSearchResults extends ViewPart
 	{
 		final String[] names = { "Seq.", "Node", "Interface", "MAC", "IP", "Switch", "Port", "Type" };
 		final int[] widths = { 70, 120, 120, 90, 90, 120, 120, 60 };
-		viewer = new SortableTableViewer(parent, names, widths, COLUMN_SEQUENCE, SWT.UP, SWT.FULL_SELECTION);
+		viewer = new SortableTableViewer(parent, names, widths, COLUMN_SEQUENCE, SWT.UP, SWT.MULTI | SWT.FULL_SELECTION);
 		viewer.setContentProvider(new ArrayContentProvider());
 		ConnectionPointLabelProvider labelProvider = new ConnectionPointLabelProvider();
 		viewer.setLabelProvider(labelProvider);
@@ -118,6 +123,30 @@ public class HostSearchResults extends ViewPart
 			}
 		};
 		actionClearLog.setImageDescriptor(SharedIcons.CLEAR_LOG);
+		
+		actionCopyIP = new Action("Copy IP address to clipboard") {
+			@Override
+			public void run()
+			{
+				copyToClipboard(COLUMN_IP_ADDRESS);
+			}
+		};
+		
+		actionCopyMAC = new Action("Copy MAC address to clipboard") {
+			@Override
+			public void run()
+			{
+				copyToClipboard(COLUMN_MAC_ADDRESS);
+			}
+		};
+		
+		actionCopyRecord = new Action("&Copy to clipboard", SharedIcons.COPY) {
+			@Override
+			public void run()
+			{
+				copyToClipboard(-1);
+			}
+		};
 	}
 
 	/**
@@ -136,6 +165,10 @@ public class HostSearchResults extends ViewPart
 	 */
 	private void fillLocalPullDown(IMenuManager manager)
 	{
+		manager.add(actionCopyRecord);
+		manager.add(actionCopyIP);
+		manager.add(actionCopyMAC);
+		manager.add(new Separator());
 		manager.add(actionClearLog);
 	}
 
@@ -145,6 +178,8 @@ public class HostSearchResults extends ViewPart
 	 */
 	private void fillLocalToolBar(IToolBarManager manager)
 	{
+		manager.add(actionCopyRecord);
+		manager.add(new Separator());
 		manager.add(actionClearLog);
 	}
 
@@ -156,8 +191,7 @@ public class HostSearchResults extends ViewPart
 		// Create menu manager.
 		MenuManager menuMgr = new MenuManager();
 		menuMgr.setRemoveAllWhenShown(true);
-		menuMgr.addMenuListener(new IMenuListener()
-		{
+		menuMgr.addMenuListener(new IMenuListener() {
 			public void menuAboutToShow(IMenuManager mgr)
 			{
 				fillContextMenu(mgr);
@@ -178,6 +212,10 @@ public class HostSearchResults extends ViewPart
 	 */
 	protected void fillContextMenu(IMenuManager manager)
 	{
+		manager.add(actionCopyRecord);
+		manager.add(actionCopyIP);
+		manager.add(actionCopyMAC);
+		manager.add(new Separator());
 		manager.add(actionClearLog);
 		manager.add(new Separator());
 		manager.add(new GroupMarker(IWorkbenchActionConstants.MB_ADDITIONS));
@@ -254,5 +292,39 @@ public class HostSearchResults extends ViewPart
 	public void dispose()
 	{
 		super.dispose();
+	}
+	
+	/**
+	 * Copy content to clipboard
+	 * 
+	 * @param column column number or -1 to copy all columns
+	 */
+	private void copyToClipboard(int column)
+	{
+		final TableItem[] selection = viewer.getTable().getSelection();
+		if (selection.length > 0)
+		{
+			final String newLine = Platform.getOS().equals(Platform.OS_WIN32) ? "\r\n" : "\n"; //$NON-NLS-1$ //$NON-NLS-2$
+			final StringBuilder sb = new StringBuilder();
+			for(int i = 0; i < selection.length; i++)
+			{
+				if (i > 0)
+					sb.append(newLine);
+				if (column == -1)
+				{
+					for(int j = 0; j < viewer.getTable().getColumnCount(); j++)
+					{
+						if (j > 0)
+							sb.append('\t');
+						sb.append(selection[i].getText(j));
+					}
+				}
+				else
+				{
+					sb.append(selection[i].getText(column));
+				}
+			}
+			WidgetHelper.copyToClipboard(sb.toString());
+		}
 	}
 }
