@@ -7,7 +7,7 @@ bin.includes = plugin.xml,\
                plugin_customization.ini,\
                OSGI-INF/,\
                jar/,\
-               jar/netxms-client-1.2.2.jar
+               jar/netxms-client-1.2.3.jar
 jars.compile.order = .
 bin.excludes = META-INF/.svn/,\
                icons/.svn/,\
