@@ -7,8 +7,8 @@ bin.includes = META-INF/,\
                OSGI-INF/,\
                jar/,\
                jar/simple-xml-2.6.4.jar,\
-               jar/netxms-base-1.2.2.jar,\
-               jar/netxms-client-api-1.2.2.jar
+               jar/netxms-base-1.2.3.jar,\
+               jar/netxms-client-api-1.2.3.jar
 bin.excludes = META-INF/.svn/,\
                icons/.svn/,\
                OSGI-INF/.svn/,\
